# pyroxene

./: .clang-format  .flake8  .gitignore  LICENSE  Makefile  README.md  demo.c  demo.h  gti2.c  main.c  proxy.py  pyproject.toml  requirements.txt  runtests.py  serialtest.py  setup.cfg  test.py
.github/workflows/: lint.yml  package.yml  test.yml
example/: README.md  test.py  test_cffi_classic.py  test_pygti2_host.py  test_pygti2_psoc.py
example/c/: generate_companion.py  mymath.c  mymath.h  mymath_helper.c  mymath_helper.h
example/cffi_classic/: ffi_builder.py
example/host/: Makefile
example/psoc6/: Makefile  cy8c6xxa_cm4_dual.ld
examples/: Makefile  demo.c  demo.h  main_host.c
pygti2/: companion_generator.py  device_commands.py  device_proxy.py  elfbackend.py  elfproxy.py  gdbmimiddleware.py  memory_management.py  proxy.py
pyroxene/: companion_generator.py  device_commands.py  device_proxy.py  elfbackend.py  memory_management.py
pyroxene/cshim/: hex2bin.c  pyroxene.c  swap.h
src/: gti2.c  gti2.h  pyroxene.h
test/: Makefile  __init__.py  test_cffi_compatibility.py  test_companion_generator.py  test_ctypes.py  test_device_proxy.py  test_elfbackend.py  test_elftypes.py  test_gti2.py  test_memory_management.py  test_multiple_parameters.c  test_multiple_parameters.py  test_pyroxene.py  test_structs.c  test_structs.h  test_structs.py
test/host/: Makefile  main.c
test/psoc/: Makefile  main.c
