[metadata]
name = pyroxene
version = attr: pyroxene.__version__
description = Pyroxene is a Python test interface: Execute tests on remote device using minmal shim and ELF debug data
long_description = file: README.md
license = MIT

[options]
packages = find:
install_requires =
    cffi
    pcpp
    pycparser
    pyelftools
    pygdbmi
    pyserial
    setuptools

[options.extras_require]
test =
    hypothesis
dev =
    flake8
    black

[flake8]
ignore = E203,W503
max-line-length = 110
